[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Hole.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=12]
extents = Vector3( 1, 0.25, 1 )

[node name="Hole" type="Area"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 12 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
